--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,9 +7,9 @@ project(
 
 set(CMAKE_CXX_STANDARD 23)
 
-include_directories(lib)
 
+add_subdirectory(lib)
 add_subdirectory(bin)
 
-# enable_testing()
-# add_subdirectory(tests)
+enable_testing()
+add_subdirectory(tests)
